src/styles/styles.css
.ProseMirror {
    >*+* {
        margin-top: 0.75em;
    }

    .Tiptap-mathematics-editor {
        background: #202020;
        color: #fff;
        font-family: monospace;
        padding: 0.2rem 0.5rem;
    }

    .Tiptap-mathematics-render {
        padding: 0 0.25rem;

        &--editable {
            cursor: pointer;
            transition: background 0.2s;

            &:hover {
                background: #eee;
            }
        }
    }

    .Tiptap-mathematics-editor,
    .Tiptap-mathematics-render {
        border-radius: 0.25rem;
        display: inline-block;
    }
}

/* Basic editor styles */
.tiptap {
    >*+* {
        margin-top: 0.75em;
    }

    ul,
    ol {
        padding: 0 1rem;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        line-height: 1.1;
    }

    code {
        background-color: rgba(#616161, 0.1);
        color: #616161;
    }

    pre {
        background: #0D0D0D;
        color: #FFF;
        font-family: 'JetBrainsMono', monospace;
        padding: 0.75rem 1rem;
        border-radius: 0.5rem;

        code {
            color: inherit;
            padding: 0;
            background: none;
            font-size: 0.8rem;
        }
    }

    img {
        max-width: 100%;
        height: auto;
    }

    blockquote {
        padding-left: 1rem;
        border-left: 2px solid rgba(#0D0D0D, 0.1);
    }

    hr {
        border: none;
        border-top: 2px solid rgba(#0D0D0D, 0.1);
        margin: 2rem 0;
    }
}
.image-resizer {
    position: relative;
    /* display: inline-block; */
}

.resize-trigger {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 10px;
    height: 10px;
    background-color: grey;
    cursor: se-resize;
}

.image-resizer:hover .resize-trigger {
    opacity: 1;
}

/* Ensure the images inside .tiptap are centered horizontally */
.tiptap img {
    
    display: block;
    /* Makes margin auto effective */
    margin-left: auto;
    /* Centers the image horizontally */
    margin-right: auto;
    /* Centers the image horizontally */
    max-width: 100%;
    /* Prevents the image from overflowing */
    height: auto;
    /* Keeps the aspect ratio */
}
img.tiptap-image::after {
    content: "\n";
    /* Adds a visible content block */
    display: block;
    /* Make it take a full line */
    min-height: 1em;
    /* Set a minimum height for the empty row */
    border-top: 1px solid #ddd;
    /* Optional: Adds a visible horizontal line */
    margin-top: 5px;
    /* Adds space between the image and row */
}

